# goblin-nip05d

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
deploy/: Caddyfile  goblin-nip05d.service  nginx.conf.example  relay-config.toml
deploy/strfry/: Dockerfile  README.md  apply-goblin-spec.sh  strfry-writepolicy.py  strfry.conf
scripts/: setup.sh
src/: auth.rs  avatar.rs  config.rs  db.rs  lib.rs  main.rs  names.rs  ratelimit.rs  util.rs
src/handlers/: avatar_http.rs  misc.rs  mod.rs  profile.rs  registry.rs  wellknown.rs
tests/: http.rs
